// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown.styles ContainerOption should match the snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 8px;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles DropdownContainer should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin: 8px;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles Flag should match snapshot when clicked 1`] = `<svg />`;

exports[`dropdown.styles Flag should match snapshot when not clicked 1`] = `<svg />`;

exports[`dropdown.styles IconGlobe should match snapshot when clicked and not themed 1`] = `
<svg
  class=""
  cursor="default"
  fill="#000000"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px;"
  width="24"
/>
`;

exports[`dropdown.styles IconGlobe should match snapshot when clicked and themed 1`] = `
<svg
  class=""
  cursor="default"
  fill="#ffffff"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px;"
  width="24"
/>
`;

exports[`dropdown.styles IconGlobe should match snapshot when not clicked and not themed 1`] = `
<svg
  class=""
  cursor="pointer"
  fill="#000000"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px;"
  width="24"
/>
`;

exports[`dropdown.styles IconGlobe should match snapshot when not clicked and themed 1`] = `
<svg
  class=""
  cursor="pointer"
  fill="#ffffff"
  height="24"
  style="min-width: 24px; min-height: 24px; max-width: 24px; max-height: 24px;"
  width="24"
/>
`;

exports[`dropdown.styles Menu should match snapshot when closed and not themed 1`] = `
.c0 {
  position: absolute;
  background: #ffffff;
  border: 1px solid #D9DDDB;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  color: #9fa5b5;
  top: 64px;
  left: 100%;
  min-width: 150px;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.2s;
  display: none;
  z-index: 1;
}

<ul
  class="c0"
/>
`;

exports[`dropdown.styles Menu should match snapshot when closed and themed 1`] = `
.c0 {
  position: absolute;
  background: #000000;
  border: 1px solid #363a43;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  color: #9fa5b5;
  top: 64px;
  left: 100%;
  min-width: 150px;
  transform: translateX(-50%);
  opacity: 0;
  transition: opacity 0.2s;
  display: none;
  z-index: 1;
}

<ul
  class="c0"
/>
`;

exports[`dropdown.styles Menu should match snapshot when open and not themed 1`] = `
.c0 {
  position: absolute;
  background: #ffffff;
  border: 1px solid #D9DDDB;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  color: #9fa5b5;
  top: 64px;
  left: 100%;
  min-width: 150px;
  transform: translateX(-50%);
  opacity: 1;
  transition: opacity 0.2s;
  display: block;
  z-index: 1;
}

<ul
  class="c0"
/>
`;

exports[`dropdown.styles Menu should match snapshot when open and themed 1`] = `
.c0 {
  position: absolute;
  background: #000000;
  border: 1px solid #363a43;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
  color: #9fa5b5;
  top: 64px;
  left: 100%;
  min-width: 150px;
  transform: translateX(-50%);
  opacity: 1;
  transition: opacity 0.2s;
  display: block;
  z-index: 1;
}

<ul
  class="c0"
/>
`;

exports[`dropdown.styles MenuItem should match snapshot when active and not themed 1`] = `
.c0 {
  display: flex;
  padding: 8px;
  margin: 4px;
  border-radius: 8px;
  cursor: default;
  background: #F2F2F2;
}

.c0:hover {
  background: #F2F2F2;
}

<li
  class="c0"
/>
`;

exports[`dropdown.styles MenuItem should match snapshot when active and themed 1`] = `
.c0 {
  display: flex;
  padding: 8px;
  margin: 4px;
  border-radius: 8px;
  cursor: default;
  background: #23242a;
}

.c0:hover {
  background: #23242a;
}

<li
  class="c0"
/>
`;

exports[`dropdown.styles MenuItem should match snapshot when not active and not themed 1`] = `
.c0 {
  display: flex;
  padding: 8px;
  margin: 4px;
  border-radius: 8px;
  cursor: pointer;
  background: transparent;
}

.c0:hover {
  background: #F2F2F2;
}

<li
  class="c0"
/>
`;

exports[`dropdown.styles MenuItem should match snapshot when not active and themed 1`] = `
.c0 {
  display: flex;
  padding: 8px;
  margin: 4px;
  border-radius: 8px;
  cursor: pointer;
  background: transparent;
}

.c0:hover {
  background: #23242a;
}

<li
  class="c0"
/>
`;

exports[`dropdown.styles Select should match snapshot when clicked and not themed 1`] = `
.c0 {
  background: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 8px 12px;
  cursor: default;
}

.c0:hover {
  background: #ffffff;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles Select should match snapshot when clicked and themed 1`] = `
.c0 {
  background: #000000;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  border: 1px solid transparent;
  border-radius: 8px;
  padding: 8px 12px;
  cursor: default;
}

.c0:hover {
  background: #000000;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles Select should match snapshot when not clicked and not themed 1`] = `
.c0 {
  background: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  border: 1px solid #000000;
  border-radius: 8px;
  padding: 8px 12px;
  cursor: pointer;
}

.c0:hover {
  background: #F2F2F2;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles Select should match snapshot when not clicked and themed 1`] = `
.c0 {
  background: #000000;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 48px;
  border: 1px solid #2a2f3b;
  border-radius: 8px;
  padding: 8px 12px;
  cursor: pointer;
}

.c0:hover {
  background: #323741;
}

<div
  class="c0"
/>
`;

exports[`dropdown.styles Selected should match snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
  gap: 8px;
}

<span
  class="c0"
/>
`;

exports[`dropdown.styles Texto should match snapshot when not themed, active and clicked 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: default;
}

<p
  class="c0 "
/>
`;

exports[`dropdown.styles Texto should match snapshot when not themed, not active and not clicked 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: pointer;
}

<p
  class="c0 "
/>
`;

exports[`dropdown.styles Texto should match snapshot when themed, active and clicked 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: default;
}

<p
  class="c0 "
/>
`;

exports[`dropdown.styles Texto should match snapshot when themed, not active and not clicked 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: pointer;
}

<p
  class="c0 "
/>
`;
